# quant_sentiment

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: ci.yml  docker-publish.yml
alembic/: env.py
alembic/versions/: 0001_sentiment.py
app/: config.py  db.py  dependencies.py  main.py  timeutil.py
app/models/: domain.py  requests.py  responses.py
app/repository/: postgres.py  schema.py
app/routes/: aggregate.py  health.py  sentiment.py
app/services/: aggregation_service.py  labels.py  sentiment_service.py  subject_resolver.py  windows.py
docs/: data_contracts.md  producer_guide.md  runbook.md
tests/: conftest.py  test_slice1_persistence_contracts.py  test_slice2_intake.py  test_slice3_subject_resolution.py  test_slice4_read.py  test_slice5_aggregation.py  test_slice6_health.py  test_slice7_hardening.py
